--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-lib": "cp projects/email-editor/package.json projects/email-editor/src/lib/source.json && ng build email-editor",
+    "build-lib": "cp projects/email-editor/package.json projects/email-editor/src/lib/source.json && ng build email-editor --prod",
     "npm-pack": "cd dist/email-editor && npm pack",
     "copy-readme": "cp README.md dist/email-editor",
     "package": "npm run build-lib && npm run copy-readme && npm run npm-pack",
-    "release": "npm run package && cd dist/email-editor && npm publish"
+    "release": "npm run package && cd dist/email-editor && npm publish --access=public"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~11.1.2",
     "@angular/common": "~11.1.2",
