--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-email-editor": {
+    "angular-email-editor-demo": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -14,19 +14,13 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/angular-email-editor",
+            "outputPath": "dist/angular-email-editor-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              "src/_redirects"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets", "src/_redirects"],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -62,18 +56,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-email-editor:build"
+            "browserTarget": "angular-email-editor-demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-email-editor:build:production"
+              "browserTarget": "angular-email-editor-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-email-editor:build"
+            "browserTarget": "angular-email-editor-demo:build"
           }
         },
         "test": {
@@ -83,31 +77,21 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": [],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ]
+            "assets": ["src/favicon.ico", "src/assets"]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
     },
-    "angular-email-editor-e2e": {
+    "angular-email-editor-demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +100,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-email-editor:serve"
+            "devServerTarget": "angular-email-editor-demo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-email-editor:serve:production"
+              "devServerTarget": "angular-email-editor-demo:serve:production"
             }
           }
         },
@@ -128,53 +112,49 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
     },
-    "email-editor": {
-      "root": "projects/email-editor",
-      "sourceRoot": "projects/email-editor/src",
+    "@alipadron/angular-email-editor": {
+      "root": "projects/@alipadron/angular-email-editor",
+      "sourceRoot": "projects/@alipadron/angular-email-editor/src",
       "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/email-editor/tsconfig.lib.json",
-            "project": "projects/email-editor/ng-package.json"
-          }
-        ,          "configurations": {
+            "tsConfig": "projects/@alipadron/angular-email-editor/tsconfig.lib.json",
+            "project": "projects/@alipadron/angular-email-editor/ng-package.json"
+          },
+          "configurations": {
             "production": {
-              "tsConfig": "projects/email-editor/tsconfig.lib.prod.json"
+              "tsConfig": "projects/@alipadron/angular-email-editor/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/email-editor/src/test.ts",
-            "tsConfig": "projects/email-editor/tsconfig.spec.json",
-            "karmaConfig": "projects/email-editor/karma.conf.js"
+            "main": "projects/@alipadron/angular-email-editor/src/test.ts",
+            "tsConfig": "projects/@alipadron/angular-email-editor/tsconfig.spec.json",
+            "karmaConfig": "projects/@alipadron/angular-email-editor/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/email-editor/tsconfig.lib.json",
-              "projects/email-editor/tsconfig.spec.json"
+              "projects/@alipadron/angular-email-editor/tsconfig.lib.json",
+              "projects/@alipadron/angular-email-editor/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
     }
   },
-  "defaultProject": "angular-email-editor"
+  "defaultProject": "angular-email-editor-demo"
 }
