--- a/projects/@alipadron/angular-email-editor/tsconfig.lib.json
+++ b/projects/@alipadron/angular-email-editor/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/lib",
+    "outDir": "../../../out-tsc/lib",
     "declarationMap": true,
     "target": "es2015",
     "module": "es2015",
@@ -12,7 +12,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "types": [],
+    "types": ["node"],
     "lib": [
       "dom",
       "es2018"
