--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~11.1.2",
-    "@angular/common": "~11.1.2",
-    "@angular/compiler": "~11.1.2",
-    "@angular/core": "~11.1.2",
-    "@angular/forms": "~11.1.2",
-    "@angular/platform-browser": "~11.1.2",
-    "@angular/platform-browser-dynamic": "~11.1.2",
-    "@angular/router": "~11.1.2",
+    "@angular/animations": "^11.1.2",
+    "@angular/common": "^11.1.2",
+    "@angular/compiler": "^11.1.2",
+    "@angular/core": "^11.1.2",
+    "@angular/forms": "^11.1.2",
+    "@angular/platform-browser": "^11.1.2",
+    "@angular/platform-browser-dynamic": "^11.1.2",
+    "@angular/router": "^11.1.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
@@ -33,8 +33,8 @@
     "@angular-devkit/build-angular": "~0.1101.4",
     "@angular-devkit/core": "^11.1.4",
     "@angular/cli": "~11.1.4",
-    "@angular/compiler-cli": "~11.1.2",
-    "@angular/language-service": "~11.1.2",
+    "@angular/compiler-cli": "^11.1.2",
+    "@angular/language-service": "^11.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
