--- a/projects/@alipadron/angular-email-editor/package.json
+++ b/projects/@alipadron/angular-email-editor/package.json
@@ -10,7 +10,6 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "~11.1.2",
-    "@angular/core": "~11.1.2"
+    "@angular/core": "^11.1.2"
   }
 }
