--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-lib": "cp projects/@alipadron/angular-email-editor/package.json projects/@alipadron/angular-email-editor/src/lib/source.json && ng build @alipadron/angular-email-editor --prod",
+    "build-lib": "ng build @alipadron/angular-email-editor --prod",
     "npm-pack": "cd dist/@alipadron/angular-email-editor && npm pack",
     "copy-readme": "cp README.md dist/@alipadron/angular-email-editor",
     "package": "npm run build-lib && npm run copy-readme && npm run npm-pack",
